--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "description": "A Node.js bbs using MongoDB",
   "repository": "https://github.com/cnodejs/nodeclub",
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
     "async": "1.5.2",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
     "bcryptjs": "2.3.0",
     "body-parser": "1.17.1",
     "bytes": "^2.2.0",
@@ -16,11 +22,13 @@
     "connect-redis": "3.0.2",
     "cookie-parser": "1.4.1",
     "cors": "2.7.1",
+    "css-loader": "^3.0.0",
     "csurf": "1.8.3",
     "data2xml": "1.2.4",
     "ejs-mate": "2.3.0",
     "eventproxy": "1.0.0",
     "express": "4.16.0",
+    "express-http-proxy": "^1.5.1",
     "express-session": "1.12.1",
     "helmet": "1.3.0",
     "ioredis": "1.15.1",
@@ -42,18 +50,41 @@
     "passport": "0.3.2",
     "passport-github": "1.1.0",
     "pm2": "*",
+    "prerender": "^5.6.0",
     "qn": "1.3.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-redux": "^7.1.0",
+    "react-router-config": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "ready": "0.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "request": "2.81.0",
     "response-time": "2.3.1",
-    "snyk": "^1.88.0",
+    "style-loader": "^0.23.1",
     "superagent": "2.0.0",
     "utility": "1.6.0",
     "validator": "5.1.0",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2",
     "xmlbuilder": "7.0.0",
     "xss": "0.2.10"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-es2018": "^1.0.0",
+    "babel-preset-es2019": "^1.0.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "errorhandler": "1.4.3",
     "istanbul": "0.4.2",
     "loader-connect": "1.0.1",
@@ -67,9 +98,9 @@
   },
   "scripts": {
     "test": "make test",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect",
-    "dev": "NODE_ENV=develop node server"
+    "dev": "NODE_ENV=develop node server",
+    "client": "webpack --config webpack.client.js",
+    "start": "babel-node app.js --presets es2015,es2016,es2017,latest,stage-0,stage-2,react"
   },
   "snyk": true
 }
