--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
   "description": "A Node.js bbs using MongoDB",
   "repository": "https://github.com/cnodejs/nodeclub",
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-0": "^7.0.0",
+    "antd": "^3.21.4",
     "async": "1.5.2",
     "axios": "^0.19.0",
-    "babel-loader": "^8.0.6",
     "bcryptjs": "2.3.0",
     "body-parser": "1.17.1",
     "bytes": "^2.2.0",
@@ -64,7 +60,8 @@
     "request": "2.81.0",
     "response-time": "2.3.1",
     "style-loader": "^0.23.1",
-    "superagent": "2.0.0",
+    "styled-components": "^4.3.2",
+    "superagent": "^5.1.0",
     "utility": "1.6.0",
     "validator": "5.1.0",
     "webpack": "^4.35.2",
@@ -76,11 +73,20 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.5.0",
+    "babel-plugin-react-css-modules": "^3.3.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "babel-preset-es2018": "^1.0.0",
-    "babel-preset-es2019": "^1.0.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -98,9 +104,12 @@
   },
   "scripts": {
     "test": "make test",
-    "dev": "NODE_ENV=develop node server",
-    "client": "webpack --config webpack.client.js",
-    "start": "babel-node app.js --presets es2015,es2016,es2017,latest,stage-0,stage-2,react"
+    "dev": "npm-run-all --parallel dev:**",
+    "dev:build:server": "webpack --config webpack.server.js",
+    "dev:build:client": "webpack --config webpack.client.js --watch",
+    "dev:start": "node server",
+    "client": "webpack --config webpack.client.js --watch",
+    "start": "nodemon --exec babel-node app.js"
   },
   "snyk": true
 }
