新增话题界面重构完成

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^3.0.0",
     "csurf": "1.8.3",
     "data2xml": "1.2.4",
+    "draft-js": "^0.11.0",
     "ejs-mate": "2.3.0",
     "eventproxy": "1.0.0",
     "express": "4.16.0",
@@ -68,6 +69,7 @@
     "webpack-cli": "^3.3.5",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
+    "webuploader": "^0.1.8",
     "xmlbuilder": "7.0.0",
     "xss": "0.2.10"
   },
