--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "client": "webpack --config webpack.client.js --watch",
     "start": "nodemon --exec babel-node app.js",
     "start1": "forever start -c babel-node app.js",
-    "start2": "forever start -c babel-node app.js"
+    "start2": "babel-node app.js"
   },
   "snyk": true
 }
