--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "dev:start": "node server",
     "client": "webpack --config webpack.client.js --watch",
     "start": "nodemon --exec babel-node app.js",
-    "start1": "forever start -l forever.log babel-node app.js",
+    "start1": "forever start -l forever.log -c babel-node app.js",
     "start2": "babel-node app.js"
   },
   "snyk": true
