--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "client": "webpack --config webpack.client.js --watch",
     "start": "nodemon --exec babel-node app.js",
     "start1": "forever start -l forever.log -c babel-node app.js",
-    "start2": "babel-node app.js"
+    "start2": "babel-node app.js",
+    "start2": "nohup babel-node app.js &"
   },
   "snyk": true
 }
