--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "start": "nodemon --exec babel-node app.js",
     "start1": "forever start -l forever.log -c babel-node app.js",
     "start2": "babel-node app.js",
-    "start3": "nohup babel-node app.js &"
+    "start3": "nohup babel-node app.js &",
+    "start4": "nohup nodemon --exec babel-node app.js"
   },
   "snyk": true
 }
