--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "start1": "forever start -l forever.log -c babel-node app.js",
     "start2": "babel-node app.js",
     "start3": "nohup babel-node app.js &",
-    "start4": "nohup nodemon --exec babel-node app.js"
+    "start4": "nohup nodemon --exec babel-node app.js &"
   },
   "snyk": true
 }
